--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -82,4 +82,5 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:okhttp-tls:4.12.0'
     testImplementation 'com.jayway.awaitility:awaitility:1.7.0'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
