--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
     testImplementation 'com.jayway.awaitility:awaitility:1.7.0'
     testImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
