--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 28
+    namespace 'com.auth0.android.lock.app'
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.auth0.android.lock.app"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion 28
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "demo"]
@@ -38,7 +39,7 @@ android {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation project(':lock')
