--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,11 @@
 
 buildscript {
     repositories {
-        jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.android.tools.build:gradle:8.8.0'
     }
 }
 
@@ -18,7 +14,7 @@ allprojects {
     group = 'com.auth0.android'
     
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 }
