--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,11 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
-
+    namespace 'com.auth0.android.lock.app'
+    compileSdk 35
     defaultConfig {
-        applicationId "com.auth0.android.lock.app"
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdkVersion 28
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "demo"]
@@ -31,23 +30,23 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
     packagingOptions {
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/NOTICE'
+        resources {
+            excludes += ['META-INF/LICENSE', 'META-INF/NOTICE']
+        }
     }
+}
 
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
-    }
+kotlin {
+    // Adding this solved it
+    jvmToolchain(17)
 }
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation project(':lock')
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.core:core-ktx:1.9.0"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
